<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.christianquintero.practica3.configura"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="0.1"
        android:gravity="center">
        <TextView
            style="@style/texViewStyle"
            android:text="@string/porcen"
            android:id="@+id/nota2"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="0.2"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center">
            <TextView
                style="@style/texViewStyle.pequ"
                android:text="@string/qu"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center">
            <EditText
                style="@style/textoEditable.config"
                android:id="@+id/epQuiz"
                />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="0.2"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">
            <TextView
                style="@style/texViewStyle.pequ"
                android:text="@string/ex"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">
            <EditText
                style="@style/textoEditable.config"
                android:id="@+id/epEx"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="0.2"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">
            <TextView
                style="@style/texViewStyle.pequ"
                android:text="@string/pra"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">
            <EditText
                style="@style/textoEditable.config"
                android:id="@+id/epPrac"
                />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="0.2"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1">
            <TextView
                style="@style/texViewStyle.pequ"
                android:text="@string/pro"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">
            <EditText
                style="@style/textoEditable.config"
                android:id="@+id/epPro"
                />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="0.4"
        android:orientation="vertical"
        android:gravity="center">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clean"
            android:onClick="limpiar"
            android:background="@drawable/botonpulsado"
            android:textSize="15sp"
            android:textStyle="bold|italic"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:text="@string/save"
            android:onClick="guardar"
            android:background="@drawable/botonpulsado"
            android:textSize="15sp"
            android:textStyle="italic|bold"/>


    </LinearLayout>


</LinearLayout>
