<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.christianquintero.practica3.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="0.1"
        android:gravity="center">
        <TextView
            style="@style/texViewStyle"
            android:text="@string/nota"
            android:id="@+id/nota"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="0.2"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center">
            <TextView
                style="@style/texViewStyle.pequ"
                android:text="@string/qu"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center">
            <EditText
                style="@style/textoEditable"
                android:hint="@string/quiz.por"
                android:id="@+id/quiz"
                />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="0.2"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">
            <TextView
                android:text="@string/ex"
                style="@style/texViewStyle.pequ"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">
            <EditText
                style="@style/textoEditable"
                android:hint="@string/exp.por"
                android:id="@+id/expo" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="0.2"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">
            <TextView
                style="@style/texViewStyle.pequ"
                android:text="@string/pra"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">
            <EditText
                style="@style/textoEditable"
                android:hint="@string/pra.por"
                android:id="@+id/pacti"
                />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="0.2"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1">
            <TextView
                style="@style/texViewStyle.pequ"
                android:text="@string/pro"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">
            <EditText
                style="@style/textoEditable"
                android:hint="@string/pro.por"
                android:id="@+id/pro" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="0.4"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calcular"
                android:onClick="calculo"
                android:background="@drawable/botonpulsado"
                android:textStyle="bold|italic"
                android:textSize="15sp"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clean"
                android:textSize="15sp"
                android:textStyle="bold|italic"
                android:background="@drawable/botonpulsado"
                android:layout_marginTop="10sp"
                android:onClick="limpiar"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/def"
                android:textSize="20sp"
                android:id="@+id/defini"
                android:textStyle="bold|italic"
                android:gravity="center"/>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>
